<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_example" translatable="false">Example action</string>

    <string name="roboto_light" translatable="false">sans-serif-light</string>
    <string name="roboto_thin" translatable="false">sans-serif-thin</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint" translatable="false">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="stocks_unavailable_error">Stocks unavailable currently, swipe down to refresh.</string>
    <string name="stocks_unavailable_error_widget">Stocks unavailable currently, tap to refresh.</string>
    <string name="stocks_details_unavailable_error">Stock details unavailable currently, swipe down to refresh.</string>
    <string name="stocks_details_unavailable_error_2">Stock details unavailable currently, tap on refresh icon to refresh.</string>
    <string name="title_activity_stock_details" translatable="false">StockDetailsActivity</string>
    <string name="high">high</string>
    <string name="interpunct" translatable="false">·</string>
    <string name="low">low</string>
    <string name="close">close</string>
    <string name="date">date</string>
    <string name="day">day</string>
    <string name="error">Error</string>
    <string name="action_refresh">Refresh</string>
    <string name="add_new_stock">Add new stock</string>
    <string name="sad_face">Sad face</string>
    <string name="graph_showing_stock_pricing">Graph showing stock pricing</string>
    <string name="loading_please_wait">Loading, please wait.</string>
    <string name="stock_prices">Stock Prices</string>
    <string name="current_stock_listing">Current stock listing</string>
    <string name="stock_price_week_history">Price listing of the stock in this/previous week.</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="bid_price">Bid Price</string>
    <string name="change_in_percentage">Change in percentage</string>
    <string name="stock_name">Stock Name</string>
    <string name="stock_price">Stock Price</string>
    <string name="change_language">Change language</string>
    <string name="action_change_language">Change Language</string>
    <string name="change">Change</string>
    <string name="action_about">About</string>
    <string name="cancel">Cancel</string>
    <string name="this_stock_is_already_saved">This stock is already saved !</string>

    <string-array name="languages_arr">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="days_arr">
        <item></item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
