<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/padding_small"
    android:weightSum="5">

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/date"
        android:text="@string/date"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/text_view_high"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/high"
        android:gravity="end"
        android:text="@string/high"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/text_view_low"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/low"
        android:gravity="end"
        android:text="@string/low"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/text_view_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/close"
        android:gravity="end"
        android:text="@string/close"
        android:textSize="@dimen/text_size_small" />

</LinearLayout>