<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.fragments.StockDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_huge" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_quote_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/stock_price_week_history"
            app:layoutManager="LinearLayoutManager" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_err_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sad_face"
                android:src="@drawable/ic_face_grey_500_24dp" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_avg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/stocks_details_unavailable_error_2"
                android:gravity="center"
                android:text="@string/stocks_details_unavailable_error" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_loading"
            style="@style/Widget.MaterialProgressBar.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/loading_please_wait"
            android:indeterminate="true"
            android:visibility="visible"
            app:mpb_progressStyle="circular" />

    </RelativeLayout>

</RelativeLayout>
